<resources>
    <string name="app_name">GarbageV7</string>


    // Fragment FIND

    //text view
    <string name="find_item_tw">What item to sort</string>

    //edit text
    <string name="find_item_et">Input the item you want to sort</string>

    //button
    <string name="find_item_bt">Find item</string>
    <string name="find_add_item_bt">Move to "add new item"</string>
    <string name="find_delete_item_bt">Move to "delete an item"</string>


    // Fragment ADD

    //text view
    <string name="add_item_what_tw">What item to sort</string>
    <string name="add_item_where_tw">Where item to sort</string>

    //edit text
    <string name="add_item_what_et">Input what item you want to add</string>
    <string name="add_item_where_et">Input where the item goes</string>

    //button
    <string name="add_item_bt">Add new item</string>

    //notification
    <string name="add_item_notification">New item added!</string>


    // Fragment DELETE

    //text view
    <string name="delete_item_tw">What item to delete</string>

    //edit text
    <string name="delete_item_et">Input the item you want to delete</string>

    //button
    <string name="delete_item_bt">Delete item</string>

    //notification
    <string name="delete_item_notification">Item deleted!</string>

    // Fragment FIND

    //notification
    <string name="list_items_notification">DataBase is empty!</string>







    //notification
    <string name="item_was_not_added_notification">You need to enter values!</string>
    <string name="empty_toast">You need to enter values!</string>


</resources>